--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     Lorem, ipsum dolor.    A fishsh Fish friend a boat
     </p>
     <div class="class">Hi hi</div>
+    <h2>тест2</h2>
 </body>
 
 </html>
